# chuk-mcp-lazarus

./: .gitignore  ARCHITECTURE.md  EXPERIMENT-USE-CASES.md  Makefile  README.md  REVOLUTIONARY-EXPERIMENTS.md  ROADMAP.md  SPEC.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: README.md
docs/ablation/: README.md
docs/activation/: README.md
docs/attention/: README.md
docs/attribution/: README.md
docs/causal/: README.md
docs/comparison/: README.md
docs/direction/: README.md
docs/experiment/: README.md
docs/generation/: README.md
docs/geometry/: README.md
docs/intervention/: README.md
docs/model/: README.md
docs/neuron/: README.md
docs/probing/: README.md
docs/residual/: README.md
docs/steering/: README.md
examples/: ablation_demo.py  attention_demo.py  attribution_sweep_demo.py  causal_tracing_demo.py  comparison_demo.py  copy_circuit_demo.py  deep_dive_demo.py  direction_demo.py  experiment_demo.py  geometry_demo.py  intervention_demo.py  language_transition_demo.py  logit_attribution_demo.py  neuron_demo.py  residual_stream_demo.py  smoke_test.py  subspace_demo.py  track_race_demo.py
src/chuk_mcp_lazarus/: __init__.py  _bootstrap.py  _compare.py  _extraction.py  _generate.py  _residual_helpers.py  _serialize.py  errors.py  (+10 more)
tests/: conftest.py  test_ablation_tools.py  test_activation_tools.py  test_attention_tools.py  test_attribution_tools.py  test_bootstrap.py  test_branch_and_collapse.py  test_build_dark_table.py  test_causal_tools.py  test_compare.py  test_comparison_state.py  test_comparison_tools.py  test_computation_map.py  test_compute_subspace.py  test_dark_table_registry.py  test_decode_residual.py  test_direction_tools.py  test_errors.py  test_experiment_store.py  test_experiment_tools.py  test_extraction.py  test_generate.py  test_generation_tools.py  test_geometry_tools.py  test_head_dla.py  test_inject_residual.py  test_intervention_tools.py  test_main.py  test_model_state.py  test_model_tools.py  test_neuron_tools.py  test_prefill_inject.py  test_probe_store.py  test_probe_tools.py  test_residual_atlas.py  test_residual_map.py  test_residual_match.py  test_residual_tools.py  test_resources.py  test_serialize.py  (+5 more)
(+74 files in other folders)
